- Upgraded project to java 11 and tomcat 9 - Upgraded to latest spring, hibernate and junit versions - Upgraded versions of other dependencies - Removed findbugs (to be replaced with spotbugs)